# Servo-TestBench-DAQ

./: .gitignore  README.md  designer.exe - Atalho.lnk  main.py  main.spec  pyproject.toml
UI/: BEST_mainUI.py  BEST_mainUI.ui  Config.ui
core/: com_controller.py  graph_controller.py  manual_controller.py  state_controller.py  telemetry_controller.py  test_controller.py
firmware/testbench_firmware_v1/: testbench_firmware_v1.ino
